--- a/css/main.css
+++ b/css/main.css
@@ -221,6 +221,70 @@ footer > .content-wrapper p, footer > .content-wrapper a {
     color:rgb(255,255,255);
 }
 
+/* Contact Form & Language Options */
+
+#overlay {
+    display:none;
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:rgba(17,35,36,.97);
+}
+
+#contact-form {
+    width:650px;
+    margin:-600px auto;    
+}
+
+#contact-form * {
+    width:100%;
+    resize:none;
+    padding:20px;
+    background:rgba(240,240,240,1);
+    font-size:4rem;
+    font-family:'Raleway',helvetica;
+    color:rgba(17,35,36,1);
+    -webkit-transition:all .2s ease-in-out;
+    -moz-transition:all .2s ease-in-out;
+    -ms-transition:all .2s ease-in-out;
+    -o-transition:all .2s ease-in-out;
+    transition:all .2s ease-in-out;
+}
+
+#contact-form input:nth-child(1) {
+    margin-bottom:-4px;
+    border:none;
+    border-bottom:1px solid rgb(200,200,200);
+}
+
+#contact-form input:nth-child(2) {
+    border:none;
+    border-top:1px solid rgb(200,200,200);
+    border-bottom:1px solid rgb(200,200,200);
+}
+
+#contact-form textarea {
+    height:250px;
+    margin-bottom:-4px;
+    border:none;
+    border-top:1px solid rgb(200,200,200);
+    border-bottom:1px solid rgb(130,130,130);
+}
+
+#contact-form #submit {
+    width:106.2%;
+    border:none;
+    border-top:1px solid rgb(130,130,130);
+    background:rgba(180,180,180,1);
+}
+
+#contact-form *:hover, #contact-form *:focus {
+    background:rgba(255,255,255,1);
+    outline:none;
+}
+
 @media screen and (max-width:1450px) {
     .content-wrapper {
         width:90%;
