--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-html { 
+html {
     font-size:62.5%;
 }
 
@@ -111,7 +111,7 @@ body {
 
 header, footer {
     width:100%;
-    background:rgba(17,35,36,1);    
+    background:rgba(17,35,36,1);
 }
 
 header {
@@ -122,7 +122,8 @@ h1 {
     width:100%;
     margin:20px 0;
     font-weight:800;
-    font-size:18rem;
+    font-size: 2.8em;
+    text-align: center;
 }
 
 .content-wrapper {
@@ -181,19 +182,19 @@ ul li:nth-child(1) {
     background:rgba(177,35,36,1);
 }
 
-ul li:nth-child(2) { 
+ul li:nth-child(2) {
     background:rgba(59,89,183,1);
 }
 
-ul li:nth-child(3) { 
+ul li:nth-child(3) {
     background:rgba(92,144,203,1);
 }
 
-ul li:nth-child(4) { 
+ul li:nth-child(4) {
     background:rgba(30,41,91,1);
 }
 
-ul li:nth-child(5) { 
+ul li:nth-child(5) {
     background:rgba(63,114,155,1);
 }
 
@@ -235,7 +236,7 @@ footer > .content-wrapper p, footer > .content-wrapper a {
 
 #contact-form {
     width:650px;
-    margin:-600px auto;    
+    margin:-600px auto;
 }
 
 #contact-form * {
@@ -290,9 +291,9 @@ footer > .content-wrapper p, footer > .content-wrapper a {
         width:90%;
     }
 
-    h1 {
+    /*h1 {
         font-size:100%;
-    }
+    }*/
 }
 
 
