--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -6,6 +6,9 @@
     padding: 0 20px;
     font-size: 16px;
   }
+  .content-wrapper .language-options {
+    display: none;
+  }
   .content-wrapper h1 {
     font-size: 2.5em;
   }
