--- a/css/media-queries.styl
+++ b/css/media-queries.styl
@@ -7,6 +7,10 @@
         padding: 0 20px;
         font-size: 16px;
 
+        .language-options{
+            display:none;
+        }
+
         h1{
             font-size: 2.5em;
         }
