--- a/css/media-queries.styl
+++ b/css/media-queries.styl
@@ -12,6 +12,7 @@
         }
 
         h1{
+            margin-top: 10px;
             font-size: 2.5em;
         }
 
@@ -33,12 +34,12 @@
             }
         }
 
-        button{
-            margin: 30px 0;
+        #get-involved{
+            margin: 20px 0;
             font-size: 2em;
         }
 
-        ul{
+        #social-media{
             display:inline-block;
             margin: 5px 0 5px 0;
 
