--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -53,6 +53,21 @@
     font-size: 0.8em;
     margin-top: 20px;
   }
+  #overlay {
+    font-size: 16px;
+  }
+  #overlay #contact-form {
+    width: 100%;
+  }
+  #overlay #contact-form input,
+  #overlay #contact-form textarea {
+    background: #fff;
+    box-sizing: border-box;
+    font-size: 1em;
+    border-top: none;
+    border-bottom: 1px solid #eaeaea;
+    margin: 0;
+  }
 }
 /* Smartphones (landscape) ----------- */
 @media only screen and (min-width : 321px) {
