--- a/css/media-queries.styl
+++ b/css/media-queries.styl
@@ -69,6 +69,23 @@
             }
         }
     }
+
+    #overlay{
+        font-size: 16px;
+
+        #contact-form{
+            width:100%;
+
+            input, textarea{
+                background:#fff;
+                box-sizing:border-box;
+                font-size:1em;
+                border-top:none;
+                border-bottom:1px solid #eaeaea;
+                margin:0;
+            }
+        }
+    }
 }
 
 /* Smartphones (landscape) ----------- */
