--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -65,12 +65,16 @@
   }
   #overlay #contact-form input,
   #overlay #contact-form textarea {
+    border-radius: 0;
     background: #fff;
     box-sizing: border-box;
     font-size: 1em;
     border-top: none;
     border-bottom: 1px solid #eaeaea;
     margin: 0;
+  }
+  #overlay #contact-form textarea {
+    height: 220px;
   }
 }
 /* Smartphones (landscape) ----------- */
