--- a/css/media-queries.styl
+++ b/css/media-queries.styl
@@ -82,12 +82,17 @@
             width:100%;
 
             input, textarea{
+                border-radius: 0;
                 background:#fff;
                 box-sizing:border-box;
                 font-size:1em;
                 border-top:none;
                 border-bottom:1px solid #eaeaea;
                 margin:0;
+            }
+
+            textarea{
+                height:220px;
             }
         }
     }
