--- a/css/main.css
+++ b/css/main.css
@@ -120,10 +120,11 @@ header {
 
 h1 {
     width:100%;
-    margin:-45px 0 20px;
+    margin:-0 0 20px 0;
     font-weight:800;
     font-size: 2.8em;
     text-align: center;
+    line-height: 1em;
 }
 
 h4{
