--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,18 @@ body {
     text-shadow:1px 1px 0 rgb(255,255,255);
 }
 
+::selection {
+    background: rgba(17,35,36,1);
+    text-shadow: 0px 0px 1px #f3f3f3;
+    color: #f1f1f1;	
+}
+
+::-moz-selection {
+    background: rgba(17,35,36,1);
+    text-shadow: 0px 0px 1px #f3f3f3;
+    color: #f1f1f1;
+}
+
 header, footer {
     width:100%;
     background:rgba(17,35,36,1);
