--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,5 +1,5 @@
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px),@media only screen and (min-width : 320px) and (max-width : 480px) {
   .content-wrapper {
     box-sizing: border-box;
     width: 100%;
@@ -58,23 +58,26 @@
     margin-top: 20px;
   }
   #overlay {
-    font-size: 16px;
+    width: 100%;
   }
   #overlay #contact-form {
     width: 100%;
+    box-sizing: border-box;
+  }
+  #overlay #contact-form h1 {
+    padding-bottom: 10px;
   }
   #overlay #contact-form input,
   #overlay #contact-form textarea {
     border-radius: 0;
     background: #fff;
-    box-sizing: border-box;
     font-size: 1em;
     border-top: none;
     border-bottom: 1px solid #eaeaea;
     margin: 0;
   }
   #overlay #contact-form textarea {
-    height: 220px;
+    height: 180px;
   }
 }
 /* Smartphones (landscape) ----------- */
