--- a/css/media-queries.styl
+++ b/css/media-queries.styl
@@ -1,6 +1,7 @@
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px),
+@media only screen and (min-width : 320px) and (max-width : 480px){
     .content-wrapper{
         box-sizing: border-box;
         width:100%;
@@ -76,15 +77,19 @@
     }
 
     #overlay{
-        font-size: 16px;
+        width:100%;
 
         #contact-form{
             width:100%;
+            box-sizing:border-box;
+
+            h1{
+                padding-bottom: 10px;
+            }
 
             input, textarea{
                 border-radius: 0;
                 background:#fff;
-                box-sizing:border-box;
                 font-size:1em;
                 border-top:none;
                 border-bottom:1px solid #eaeaea;
@@ -92,7 +97,7 @@
             }
 
             textarea{
-                height:220px;
+                height:180px;
             }
         }
     }
