--- a/css/main.css
+++ b/css/main.css
@@ -30,15 +30,11 @@ html {
  */
 
 ::-moz-selection {
-    background: background: rgba(17,35,36,1);
-    text-shadow: 0px 0px 1px #f3f3f3;
-    color: #f1f1f1;
+    background: background: rgba(17,35,36,.5);
 }
 
 ::selection {
-    background: rgba(17,35,36,1);
-    text-shadow: 0px 0px 1px #f3f3f3;
-    color: #f1f1f1;
+    background: rgba(17,35,36,.5);
 }
 
 /*
