message placeholder changed to whats up, failed to add conditional js to size message block for mobile, added min-height to message in mediaquery

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -77,7 +77,7 @@
     margin: 0;
   }
   #overlay #contact-form textarea {
-    height: 180px;
+    height: 180px !important;
   }
 }
 /* Smartphones (landscape) ----------- */
