--- a/css/media-queries.styl
+++ b/css/media-queries.styl
@@ -97,7 +97,7 @@
             }
 
             textarea{
-                height:180px;
+                height:180px !important;
             }
         }
     }
