--- a/css/main.css
+++ b/css/main.css
@@ -30,11 +30,15 @@ html {
  */
 
 ::-moz-selection {
-    background: background: rgba(17,35,36,.5);
+    background: background: rgba(19,74,101,.6);
+    color:#fff;
+    text-shadow:none;
 }
 
 ::selection {
-    background: rgba(17,35,36,.5);
+    background: rgba(19,74,101,.6);
+    color:#fff;
+    text-shadow:none;
 }
 
 /*
@@ -255,7 +259,7 @@ footer {
 }
 
 footer .content-wrapper{
-    margin: 0;
+    margin: 0 auto;
 }
 
 footer .content-wrapper p {
