font-weight fix

--- a/css/main.css
+++ b/css/main.css
@@ -166,6 +166,7 @@ ul li {
     padding-left: 0px;
     margin-bottom: 40px;
     margin-top: 10px;
+    font-weight: 100;
 }
 
 .content-wrapper p.mobile-text {
