--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,7 @@ body {
     color:rgb(17,35,36);
     background:rgb(240,240,240);
     text-shadow:1px 1px 0 rgb(255,255,255);
+    border-top:20px solid #112324;
     -webkit-transition:all .2s ease-in-out;
     -moz-transition:all .2s ease-in-out;
     -ms-transition:all .2s ease-in-out;
@@ -118,13 +119,9 @@ body {
     transition:all .2s ease-in-out;
 }
 
-header, footer {
+footer {
     width:100%;
     background:rgb(17,35,36);
-}
-
-header {
-    height:20px;
 }
 
 h1 {
@@ -238,23 +235,23 @@ button:focus {
     transition:background .2s ease-in-out;
 }
 
-#social-media li:nth-child(1) {
+#social-media li .youtube {
     background:rgb(177,35,36);
 }
 
-#social-media li:nth-child(2) {
+#social-media li .facebook {
     background:rgb(59,89,183);
 }
 
-#social-media li:nth-child(3) {
+#social-media li .twitter {
     background:rgb(92,144,203);
 }
 
-#social-media li:nth-child(4) {
+#social-media li .tumblr {
     background:rgb(30,41,91);
 }
 
-#social-media li:nth-child(5) {
+#social-media li .instagram {
     background:rgb(63,114,155);
 }
 
@@ -262,7 +259,11 @@ button:focus {
     background:rgb(255,195,40);
 }
 
-#social-media li img {
+#social-media li a{
+    display:inline-block;
+}
+
+#social-media li a img {
     width:100%;
     height:auto;
 }
@@ -324,15 +325,16 @@ footer .content-wrapper p, footer .content-wrapper a {
     box-sizing:border-box;
 }
 
-#contact-form h1, #contact-form input, #contact-form textarea{
+#contact-form .contactLogotype, #contact-form input, #contact-form textarea{
     border-radius: 0;
     font-size:1em;
     border:none;
     margin:0;
 }
 
-#contact-form h1{
+#contact-form .contactLogotype{
     padding:0 20px 20px 20px;
+    text-align: center;
 }
 
 #contact-form input[type="text"]{
