--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,5 +1,5 @@
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px),@media only screen and (min-width : 320px) and (max-width : 480px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   .content-wrapper {
     box-sizing: border-box;
     width: 100%;
