--- a/css/main.css
+++ b/css/main.css
@@ -227,7 +227,7 @@ button:focus {
     height:20%;
 }
 
-#social-media li, button {
+#social-media li a, button {
      -webkit-transition:background .2s ease-in-out;
     -moz-transition:background .2s ease-in-out;
     -ms-transition:background .2s ease-in-out;
@@ -323,6 +323,7 @@ footer .content-wrapper p, footer .content-wrapper a {
     -o-transition: margin-top .2s ease-in-out;
     transition: margin-top .2s ease-in-out;
     box-sizing:border-box;
+    -moz-box-sizing:border-box;
 }
 
 #contact-form .contactLogotype, #contact-form input, #contact-form textarea{
