fixed botched display

--- a/css/style.styl
+++ b/css/style.styl
@@ -136,6 +136,8 @@ body {
 
         #social-media {
             margin:20px 0 80px;
+            width: 100%;
+            display:block;
 
             li{
                 margin:0 -16px 0 0;
@@ -143,7 +145,7 @@ body {
                 height:20%;
 
                 a{
-                    display:inline-block;
+                    display:block;
                     -webkit-transition:background .2s ease-in-out;
                     -moz-transition:background .2s ease-in-out;
                     -ms-transition:background .2s ease-in-out;
