--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,8 @@ body .content-wrapper #get-involved:focus {
 }
 body .content-wrapper #social-media {
   margin: 20px 0 80px;
+  width: 100%;
+  display: block;
 }
 body .content-wrapper #social-media li {
   margin: 0 -16px 0 0;
@@ -121,7 +123,7 @@ body .content-wrapper #social-media li {
   height: 20%;
 }
 body .content-wrapper #social-media li a {
-  display: inline-block;
+  display: block;
   -webkit-transition: background 0.2s ease-in-out;
   -moz-transition: background 0.2s ease-in-out;
   -ms-transition: background 0.2s ease-in-out;
