fixes button losing placement in right to left state

--- a/css/style.styl
+++ b/css/style.styl
@@ -119,6 +119,7 @@ body {
             width: 100%;
             margin: 80px 0;
             border:none;
+            clear:both;
             -webkit-transition:background .2s ease-in-out;
             -moz-transition:background .2s ease-in-out;
             -ms-transition:background .2s ease-in-out;
