--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ body .content-wrapper #get-involved {
   width: 100%;
   margin: 80px 0;
   border: none;
+  clear: both;
   -webkit-transition: background 0.2s ease-in-out;
   -moz-transition: background 0.2s ease-in-out;
   -ms-transition: background 0.2s ease-in-out;
