--- a/css/media-queries.styl
+++ b/css/media-queries.styl
@@ -8,34 +8,34 @@
         font-size: 16px;
 
         .language-options{
-            display:none;
+            display:none !important;
         }
 
         h1{
             margin-top: 10px;
-            font-size: 2.5em;
+            font-size: 2.2em !important;
         }
 
         h4{
-            font-size: 1.5em;
+            font-size: 1em;
             font-weight: 400;
             margin-top:20px;
         }
 
         p{
-            font-size: 1em;
+            font-size: 1em !important;
             font-weight: 100;
             margin-top:20px;
             display:none;
 
             &.mobile-text{
                 margin-top:0;
-                display:block;
+                display:block !important;
             }
         }
 
         #get-involved{
-            margin: 20px 0;
+            margin: 20px 0 !important;
             font-size: 2em;
         }
 
@@ -44,7 +44,7 @@
             margin: 5px 0 5px 0;
 
             li{
-                margin: 0 0 10px 0;
+                margin: 0 0 10px 0 !important;
                 width: 20%;
                 float: left;
 
@@ -76,10 +76,9 @@
     }
 
     #overlay{
-        width:100%;
 
         #contact-form{
-            width:100%;
+            width:100% !important;
             box-sizing:border-box;
 
             h1{
@@ -93,10 +92,12 @@
                 border-top:none;
                 border-bottom:1px solid #eaeaea;
                 margin:0;
+                padding: 15px 7px !important;
             }
 
-            textarea{
-                height:180px !important;
+            #message{
+                min-height:160px !important;
+                height:160px;
             }
         }
     }
