right to left support, added erroring in the event of a broken translation

--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ body .content-wrapper #social-media {
   margin: 20px 0 80px;
   width: 100%;
   display: block;
+  clear: both;
 }
 body .content-wrapper #social-media li {
   margin: 0 -16px 0 0;
@@ -161,10 +162,13 @@ footer {
 }
 footer .content-wrapper {
   margin: 0 auto;
+  display: inline-block;
 }
 footer .content-wrapper p {
   line-height: 1.8em;
   margin: 0;
+  clear: both;
+  width: 100%;
 }
 footer .content-wrapper p,
 footer .content-wrapper a {
@@ -259,22 +263,14 @@ footer .content-wrapper a {
 }
 button {
   border: none;
-  -webkit-transition: background 0.2s ease-in-out;
-  -moz-transition: background 0.2s ease-in-out;
-  -ms-transition: background 0.2s ease-in-out;
-  -o-transition: background 0.2s ease-in-out;
-  transition: background 0.2s ease-in-out;
 }
 button:focus {
   outline: none;
 }
 .rtl {
-  direction: rtl;
+  direction: rtl !important;
   float: right !important;
 }
 .rtl li {
   float: right !important;
-}
-.rtl-center {
-  direction: rtl;
 }
