--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -9,6 +9,10 @@
   .content-wrapper .language-options {
     display: none !important;
   }
+  .content-wrapper .language-options li button {
+    padding: 3px 8px !important;
+    font-size: 0.8em !important;
+  }
   .content-wrapper h1 {
     margin-top: 10px;
     font-size: 2.2em !important;
@@ -25,8 +29,9 @@
     display: none;
   }
   .content-wrapper p.mobile-text {
-    margin-top: 0;
+    margin-top: 20px !important;
     display: block !important;
+    clear: both;
   }
   .content-wrapper #get-involved {
     margin: 20px 0 !important;
