--- a/css/media-queries.styl
+++ b/css/media-queries.styl
@@ -7,8 +7,14 @@
         padding: 0 20px;
         font-size: 16px;
 
-        .language-options{
+        .language-options {
             display:none !important;
+            li {
+                button {
+                    padding:3px 8px !important;
+                    font-size:0.8em !important;
+                }
+            }
         }
 
         h1{
@@ -29,8 +35,9 @@
             display:none;
 
             &.mobile-text{
-                margin-top:0;
+                margin-top:20px !important;
                 display:block !important;
+                clear:both;
             }
         }
 
