--- a/css/style.styl
+++ b/css/style.styl
@@ -1,6 +1,7 @@
 $color = #11242f
 $selectColor = #6A8B9B
 $hoverColor = #FFC328
+$transitionTime = 0.2s
 
 html,
 button,
@@ -35,11 +36,11 @@ body {
     background:#fafafa;
     text-shadow:1px 1px 0 rgb(255,255,255);
     border-top:20px solid $color;
-    -webkit-transition:all .2s ease-in-out;
-    -moz-transition:all .2s ease-in-out;
-    -ms-transition:all .2s ease-in-out;
-    -o-transition:all .2s ease-in-out;
-    transition:all .2s ease-in-out;
+    -webkit-transition:all $transitionTime ease-in-out;
+    -moz-transition:all $transitionTime ease-in-out;
+    -ms-transition:all $transitionTime ease-in-out;
+    -o-transition:all $transitionTime ease-in-out;
+    transition:all $transitionTime ease-in-out;
 
     ul {
         padding:0;
@@ -56,16 +57,19 @@ body {
         margin:30px auto 0 auto;
 
         .language-options{
+            display:none;
             clear:both;
             float:left;
             display:inline-block;
             margin-bottom:20px;
+            height:38px;
+            overflow:hidden;
 
             li{
                 font-size:2rem;
                 float:left;
 
-                button{
+                .languageButton{
                     background:none;
                     padding:5px 10px;
                     font-family:'Raleway',helvetica;
@@ -77,6 +81,108 @@ body {
                         color:rgb(255,255,255);
                     }
                 }
+            }
+        }
+
+        .language-modal{
+            background:none;
+            width: 100%;
+            position: fixed;
+            border-top:20px solid $color;
+            top: 0;
+            left: 0;
+            right:0;
+            bottom:0;
+            overflow:hidden;
+            display:none;
+
+            .modal-wrapper{
+                border-bottom:1px solid #eee;
+                background:#fafafa;
+                position: absolute;
+                z-index:1;
+                width:100%;
+
+                .content-wrapper{
+                    overflow:auto;
+                    margin: 0 auto 30px auto;
+                    padding-top:30px;
+
+                    &.displayLanguageModal{
+                        margin-top:0!important;
+                        -webkit-transition :margin-top $transitionTime ease-in-out;
+                        -moz-transition :margin-top $transitionTime ease-in-out;
+                        -ms-transition :margin-top $transitionTime ease-in-out;
+                        -o-transition :margin-top $transitionTime ease-in-out;
+                        transition :margin-top $transitionTime ease-in-out;
+                    }
+
+                    &.hideLanguageModal{
+                        margin-top:-200px;
+                        -webkit-transition :margin-top $transitionTime ease-in-out;
+                        -moz-transition :margin-top $transitionTime ease-in-out;
+                        -ms-transition :margin-top $transitionTime ease-in-out;
+                        -o-transition :margin-top $transitionTime ease-in-out;
+                        transition :margin-top $transitionTime ease-in-out;
+                    }
+
+                    .language-options{
+                        height:auto;
+                        margin:auto;
+                        display:block;
+                    }
+
+                    a{
+                        text-decoration:none;
+                        color:#C90007;
+                        font-size:2rem;
+                        font-weight:100;
+                        margin:auto;
+                    }
+                }
+            }
+
+            .background{
+                display:none;
+                background:$color;
+                opacity:0.97;
+                position: absolute;
+                bottom: 0;
+                top: 0;
+                left: 0;
+                right: 0;
+                display:none;
+                cursor:pointer;
+            }
+        }
+
+        .moreLanguages{
+            height:38px;
+            float:right;
+            border-radius:2px;
+            font-family:'Raleway',helvetica;
+            font-weight: 100;
+            font-size:2rem;
+            width:10px;
+            background-color:$color;
+            color:$color;
+            padding:5px 0;
+            -webkit-transition: all $transitionTime ease-in-out;
+            -moz-transition: all $transitionTime ease-in-out;
+            -ms-transition: all $transitionTime ease-in-out;
+            -o-transition: all $transitionTime ease-in-out;
+            transition: all $transitionTime ease-in-out;
+
+            &:hover {
+                width:initial;
+                color:#fff;
+                padding:5px 13px;
+                background-color:$color;
+                -webkit-transition: all $transitionTime ease-in-out;
+                -moz-transition: all $transitionTime ease-in-out;
+                -ms-transition: all $transitionTime ease-in-out;
+                -o-transition: all $transitionTime ease-in-out;
+                transition: all $transitionTime ease-in-out;
             }
         }
 
@@ -120,11 +226,11 @@ body {
             margin: 80px 0;
             border:none;
             clear:both;
-            -webkit-transition:background .2s ease-in-out;
-            -moz-transition:background .2s ease-in-out;
-            -ms-transition:background .2s ease-in-out;
-            -o-transition:background .2s ease-in-out;
-            transition:background .2s ease-in-out;
+            -webkit-transition:background $transitionTime ease-in-out;
+            -moz-transition:background $transitionTime ease-in-out;
+            -ms-transition:background $transitionTime ease-in-out;
+            -o-transition:background $transitionTime ease-in-out;
+            transition:background $transitionTime ease-in-out;
 
             &:hover {
                 background:$hoverColor;
@@ -148,11 +254,11 @@ body {
 
                 a{
                     display:block;
-                    -webkit-transition:background .2s ease-in-out;
-                    -moz-transition:background .2s ease-in-out;
-                    -ms-transition:background .2s ease-in-out;
-                    -o-transition:background .2s ease-in-out;
-                    transition:background .2s ease-in-out;
+                    -webkit-transition:background $transitionTime ease-in-out;
+                    -moz-transition:background $transitionTime ease-in-out;
+                    -ms-transition:background $transitionTime ease-in-out;
+                    -o-transition:background $transitionTime ease-in-out;
+                    transition:background $transitionTime ease-in-out;
 
                     img {
                         width:100%;
@@ -222,17 +328,16 @@ footer {
     left:0;
     width:100%;
     height:100%;
-    background:$color;
-    background:rgba(17,35,36,.97);
+    background:rgba($color,.97);
     cursor:pointer;
 
     .displayed{
         margin-top:0 !important;
-        -webkit-transition: margin-top .2s ease-in-out;
-        -moz-transition: margin-top .2s ease-in-out;
-        -ms-transition: margin-top .2s ease-in-out;
-        -o-transition: margin-top .2s ease-in-out;
-        transition: margin-top .2s ease-in-out;
+        -webkit-transition: margin-top $transitionTime ease-in-out;
+        -moz-transition: margin-top $transitionTime ease-in-out;
+        -ms-transition: margin-top $transitionTime ease-in-out;
+        -o-transition: margin-top $transitionTime ease-in-out;
+        transition: margin-top $transitionTime ease-in-out;
     }
 
     #contact-form {
@@ -244,22 +349,22 @@ footer {
         background:#fff;
         cursor:initial;
         overflow:auto;
-        -webkit-transition: margin-top .2s ease-in-out;
-        -moz-transition: margin-top .2s ease-in-out;
-        -ms-transition: margin-top .2s ease-in-out;
-        -o-transition: margin-top .2s ease-in-out;
-        transition: margin-top .2s ease-in-out;
+        -webkit-transition: margin-top $transitionTime ease-in-out;
+        -moz-transition: margin-top $transitionTime ease-in-out;
+        -ms-transition: margin-top $transitionTime ease-in-out;
+        -o-transition: margin-top $transitionTime ease-in-out;
+        transition: margin-top $transitionTime ease-in-out;
 
         *{
             width:100%;
             resize:none;
             font-family:'Raleway',helvetica;
             color:$color;
-            -webkit-transition: margin-top .2s ease-in-out;
-            -moz-transition: margin-top .2s ease-in-out;
-            -ms-transition: margin-top .2s ease-in-out;
-            -o-transition: margin-top .2s ease-in-out;
-            transition: margin-top .2s ease-in-out;
+            -webkit-transition: margin-top $transitionTime ease-in-out;
+            -moz-transition: margin-top $transitionTime ease-in-out;
+            -ms-transition: margin-top $transitionTime ease-in-out;
+            -o-transition: margin-top $transitionTime ease-in-out;
+            transition: margin-top $transitionTime ease-in-out;
             box-sizing:border-box;
             -moz-box-sizing:border-box;
         }
@@ -317,7 +422,7 @@ button {
 
 .rtl{
     direction:rtl!important;
-    float:right !important;
+    // float:right !important;
 
     li{
         float:right !important;
