--- a/css/media-queries.styl
+++ b/css/media-queries.styl
@@ -10,7 +10,7 @@
         .language-options {
             display:none !important;
             li {
-                button {
+                .languageButton {
                     padding:3px 8px !important;
                     font-size:0.8em !important;
                 }
