--- a/css/style.styl
+++ b/css/style.styl
@@ -34,7 +34,7 @@ body {
     font-family:'Raleway',sans-serif;
     color:$color;
     background:#fafafa;
-    text-shadow:1px 1px 0 rgb(255,255,255);
+    text-shadow:1px 1px 0 #fff;
     border-top:20px solid $color;
     -webkit-transition:all $transitionTime ease-in-out;
     -moz-transition:all $transitionTime ease-in-out;
@@ -78,7 +78,7 @@ body {
 
                     &.active {
                         background:$color;
-                        color:rgb(255,255,255);
+                        color:#fff;
                     }
                 }
             }
@@ -164,8 +164,8 @@ body {
             font-weight: 100;
             font-size:2rem;
             width:10px;
-            background-color:$color;
-            color:$color;
+            background-color:#182A35;
+            color:#182A35;
             padding:5px 0;
             -webkit-transition: all $transitionTime ease-in-out;
             -moz-transition: all $transitionTime ease-in-out;
