--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -9,7 +9,7 @@
   .content-wrapper .language-options {
     display: none !important;
   }
-  .content-wrapper .language-options li button {
+  .content-wrapper .language-options li .languageButton {
     padding: 3px 8px !important;
     font-size: 0.8em !important;
   }
