--- a/css/style.css
+++ b/css/style.css
@@ -141,8 +141,8 @@ body .content-wrapper .moreLanguages {
   font-weight: 100;
   font-size: 2rem;
   width: 10px;
-  background-color: #11242f;
-  color: #11242f;
+  background-color: #182a35;
+  color: #182a35;
   padding: 5px 0;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
