--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,9 @@ body .content-wrapper .language-options {
   overflow: hidden;
 }
 body .content-wrapper .language-options li {
-  font-size: 2rem;
+  font-size: 1.5rem;
   float: left;
+  width: 113px;
 }
 body .content-wrapper .language-options li .languageButton {
   background: none;
@@ -64,6 +65,11 @@ body .content-wrapper .language-options li .languageButton {
   font-family: 'Raleway', helvetica;
   font-weight: 100;
   height: 38px;
+}
+body .content-wrapper .language-options li .languageButton.beta:after {
+  content: " BETA";
+  color: #db0000;
+  font-size: 1rem;
 }
 body .content-wrapper .language-options li .languageButton.active {
   background: #11242f;
@@ -90,7 +96,7 @@ body .content-wrapper .language-modal .modal-wrapper {
 }
 body .content-wrapper .language-modal .modal-wrapper .content-wrapper {
   overflow: auto;
-  margin: 0 auto 30px auto;
+  margin: 0 auto;
   padding-top: 30px;
 }
 body .content-wrapper .language-modal .modal-wrapper .content-wrapper.displayLanguageModal {
@@ -111,15 +117,28 @@ body .content-wrapper .language-modal .modal-wrapper .content-wrapper.hideLangua
 }
 body .content-wrapper .language-modal .modal-wrapper .content-wrapper .language-options {
   height: auto;
-  margin: auto;
+  margin: 0 auto 15px auto;
   display: block;
+  width: 100%;
+}
+body .content-wrapper .language-modal .modal-wrapper .content-wrapper .language-options li {
+  width: 10%;
 }
 body .content-wrapper .language-modal .modal-wrapper .content-wrapper a {
   text-decoration: none;
-  color: #c90007;
-  font-size: 2rem;
+  color: #db0000;
+  font-size: 1.5rem;
   font-weight: 100;
   margin: auto;
+  display: block;
+  text-align: center;
+  clear: both;
+  padding: 15px;
+  border-top: 1px solid #eee;
+}
+body .content-wrapper .language-modal .modal-wrapper .content-wrapper a:hover {
+  background: #eee;
+  text-shadow: none;
 }
 body .content-wrapper .language-modal .background {
   display: none;
@@ -134,27 +153,16 @@ body .content-wrapper .language-modal .background {
   cursor: pointer;
 }
 body .content-wrapper .moreLanguages {
+  width: 113px;
   height: 38px;
   float: right;
-  border-radius: 2px;
+  border-bottom: 2px solid #11242f;
   font-family: 'Raleway', helvetica;
   font-weight: 100;
   font-size: 2rem;
-  width: 10px;
-  background-color: #182a35;
-  color: #182a35;
-  padding: 5px 0;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-body .content-wrapper .moreLanguages:hover {
-  width: initial;
+  background-color: #11242f;
   color: #fff;
   padding: 5px 13px;
-  background-color: #11242f;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   -ms-transition: all 0.2s ease-in-out;
@@ -254,6 +262,7 @@ footer {
   background: #11242f;
   padding: 50px 0;
   text-align: center;
+  clear: both;
 }
 footer .content-wrapper {
   margin: 0 auto;
@@ -363,6 +372,7 @@ button:focus {
 }
 .rtl {
   direction: rtl !important;
+  float: right !important;
 }
 .rtl li {
   float: right !important;
