--- a/css/style.styl
+++ b/css/style.styl
@@ -66,8 +66,9 @@ body {
             overflow:hidden;
 
             li{
-                font-size:2rem;
+                font-size:1.5rem;
                 float:left;
+                width:113px;
 
                 .languageButton{
                     background:none;
@@ -75,6 +76,12 @@ body {
                     font-family:'Raleway',helvetica;
                     font-weight: 100;
                     height:38px;
+
+                    &.beta:after{
+                        content:" BETA";
+                        color:#DB0000;
+                        font-size:1rem;
+                    }
 
                     &.active {
                         background:$color;
@@ -105,7 +112,7 @@ body {
 
                 .content-wrapper{
                     overflow:auto;
-                    margin: 0 auto 30px auto;
+                    margin: 0 auto;
                     padding-top:30px;
 
                     &.displayLanguageModal{
@@ -128,16 +135,31 @@ body {
 
                     .language-options{
                         height:auto;
-                        margin:auto;
+                        margin:0 auto 15px auto;
                         display:block;
+                        width:100%;
+
+                        li{
+                            width:10%;
+                        }
                     }
 
                     a{
-                        text-decoration:none;
-                        color:#C90007;
-                        font-size:2rem;
-                        font-weight:100;
+                        text-decoration: none;
+                        color: #DB0000;
+                        font-size: 1.5rem;
+                        font-weight: 100;
                         margin:auto;
+                        display: block;
+                        text-align:center;
+                        clear: both;
+                        padding: 15px;
+                        border-top: 1px solid #eee;
+
+                        &:hover{
+                            background:#eee;
+                            text-shadow:none;
+                        }
                     }
                 }
             }
@@ -157,33 +179,21 @@ body {
         }
 
         .moreLanguages{
+            width:113px;
             height:38px;
             float:right;
-            border-radius:2px;
+            border-bottom:2px solid $color;
             font-family:'Raleway',helvetica;
             font-weight: 100;
             font-size:2rem;
-            width:10px;
-            background-color:#182A35;
-            color:#182A35;
-            padding:5px 0;
+            background-color: $color;
+            color: #fff;
+            padding:5px 13px;
             -webkit-transition: all $transitionTime ease-in-out;
             -moz-transition: all $transitionTime ease-in-out;
             -ms-transition: all $transitionTime ease-in-out;
             -o-transition: all $transitionTime ease-in-out;
             transition: all $transitionTime ease-in-out;
-
-            &:hover {
-                width:initial;
-                color:#fff;
-                padding:5px 13px;
-                background-color:$color;
-                -webkit-transition: all $transitionTime ease-in-out;
-                -moz-transition: all $transitionTime ease-in-out;
-                -ms-transition: all $transitionTime ease-in-out;
-                -o-transition: all $transitionTime ease-in-out;
-                transition: all $transitionTime ease-in-out;
-            }
         }
 
         .logotype {
@@ -301,6 +311,7 @@ footer {
     background:$color;
     padding:50px 0;
     text-align:center;
+    clear:both;
 
     .content-wrapper{
         margin: 0 auto;
@@ -422,7 +433,7 @@ button {
 
 .rtl{
     direction:rtl!important;
-    // float:right !important;
+    float:right !important;
 
     li{
         float:right !important;
