--- a/css/main.styl
+++ b/css/main.styl
@@ -22,12 +22,12 @@
  */
 
 hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
+    display block
+    height 1px
+    border 0
+    border-top 1px solid #ccc
+    margin 1em 0
+    padding 0
 }
 
 /*
@@ -39,7 +39,7 @@ audio,
 canvas,
 img,
 video {
-    vertical-align: middle;
+    vertical-align middle
 }
 
 /*
@@ -47,9 +47,9 @@ video {
  */
 
 fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
+    border 0
+    margin 0
+    padding 0
 }
 
 /*
@@ -57,7 +57,7 @@ fieldset {
  */
 
 textarea {
-    resize: vertical;
+    resize vertical
 }
 
 /* ==========================================================================
@@ -65,10 +65,10 @@ textarea {
    ========================================================================== */
 
 .browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+    margin 0.2em 0
+    background #ccc
+    color #000
+    padding 0.2em 0
 }
 
 /* ==========================================================================
@@ -85,18 +85,18 @@ textarea {
  */
 
 .ir {
-    background-color: transparent;
-    border: 0;
-    overflow: hidden;
+    background-color transparent
+    border 0
+    overflow hidden
     /* IE 6/7 fallback */
-    *text-indent: -9999px;
+    *text-indent: -9999px
 }
 
 .ir:before {
-    content: "";
-    display: block;
-    width: 0;
-    height: 150%;
+    content ""
+    display block
+    width 0
+    height 150%
 }
 
 /*
@@ -104,8 +104,8 @@ textarea {
  */
 
 .hidden {
-    display: none !important;
-    visibility: hidden;
+    display none !important
+    visibility hidden
 }
 
 /*
@@ -113,14 +113,14 @@ textarea {
  */
 
 .visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
+    border 0
+    clip rect(0 0 0 0)
+    height 1px
+    margin -1px
+    overflow hidden
+    padding 0
+    position absolute
+    width 1px
 }
 
 /*
@@ -130,12 +130,12 @@ textarea {
 
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
+    clip auto
+    height auto
+    margin 0
+    overflow visible
+    position static
+    width auto
 }
 
 /*
@@ -143,7 +143,7 @@ textarea {
  */
 
 .invisible {
-    visibility: hidden;
+    visibility hidden
 }
 
 /*
@@ -160,12 +160,12 @@ textarea {
 
 .clearfix:before,
 .clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
+    content " " /* 1 */
+    display table /* 2 */
 }
 
 .clearfix:after {
-    clear: both;
+    clear both
 }
 
 /*
@@ -174,7 +174,7 @@ textarea {
  */
 
 .clearfix {
-    *zoom: 1;
+    *zoom: 1
 }
 
 /* ==========================================================================
@@ -201,23 +201,23 @@ textarea {
 
 @media print {
     * {
-        background: transparent !important;
-        color: #000 !important; /* Black prints faster: h5bp.com/s */
-        box-shadow: none !important;
-        text-shadow: none !important;
+        background transparent !important
+        color #000 !important /* Black prints faster: h5bp.com/s */
+        box-shadow none !important
+        text-shadow none !important
     }
 
     a,
     a:visited {
-        text-decoration: underline;
+        text-decoration underline
     }
 
     a[href]:after {
-        content: " (" attr(href) ")";
+        content " (" attr(href) ")"
     }
 
     abbr[title]:after {
-        content: " (" attr(title) ")";
+        content " (" attr(title) ")"
     }
 
     /*
@@ -227,41 +227,41 @@ textarea {
     .ir a:after,
     a[href^="javascript:"]:after,
     a[href^="#"]:after {
-        content: "";
+        content ""
     }
 
     pre,
     blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
+        border 1px solid #999
+        page-break-inside avoid
     }
 
     thead {
-        display: table-header-group; /* h5bp.com/t */
+        display table-header-group /* h5bp.com/t */
     }
 
     tr,
     img {
-        page-break-inside: avoid;
+        page-break-inside avoid
     }
 
     img {
-        max-width: 100% !important;
+        max-width 100% !important
     }
 
     @page {
-        margin: 0.5cm;
+        margin 0.5cm
     }
 
     p,
     h2,
     h3 {
-        orphans: 3;
-        widows: 3;
+        orphans 3
+        widows 3
     }
 
     h2,
     h3 {
-        page-break-after: avoid;
+        page-break-after avoid
     }
 }
