--- a/css/style.css
+++ b/css/style.css
@@ -23,15 +23,14 @@ html {
   background: #0e1f28;
 }
 body {
-  font-size: 6rem;
   color: #11242f;
   background: #fafafa;
   text-shadow: 1px 1px 0 #fff;
   border-top: 20px solid #11242f;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 body ul {
@@ -44,321 +43,72 @@ body ul li {
 }
 body .content-wrapper {
   width: 1280px;
-  margin: 30px auto 0 auto;
-}
-body .content-wrapper .language-options {
-  display: none;
-  clear: both;
-  float: left;
-  display: inline-block;
-  margin-bottom: 20px;
-  height: 38px;
-  overflow: hidden;
-}
-body .content-wrapper .language-options li {
-  font-size: 1.5rem;
-  float: left;
-  width: 113px;
-}
-body .content-wrapper .language-options li .languageButton {
-  background: none;
-  padding: 5px 10px;
-  font-weight: 100;
-  height: 38px;
-}
-body .content-wrapper .language-options li .languageButton.beta:after {
-  content: " BETA";
-  color: #db0000;
-  font-size: 1rem;
-}
-body .content-wrapper .language-options li .languageButton.active {
-  background: #11242f;
-  color: #fff;
-}
-body .content-wrapper .language-modal {
-  background: none;
-  width: 100%;
-  position: fixed;
-  border-top20px: solid #11242f;
-  top: 0;
-  left: 0;
-right0
-bottom0
-  overflow: hidden;
-  display: none;
-}
-body .content-wrapper .language-modal .modal-wrapper {
-  border-bottom: 1px solid #eee;
-  background: #fafafa;
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-}
-body .content-wrapper .language-modal .modal-wrapper .content-wrapper {
-  overflow: auto;
-  margin: 0 auto;
-  padding-top: 30px;
-}
-body .content-wrapper .language-modal .modal-wrapper .content-wrapper.displayLanguageModal {
-  margin-top: 0 !important;
-  -webkit-transition: margin-top 0.2s ease-in-out;
-  -moz-transition: margin-top 0.2s ease-in-out;
-  -ms-transition: margin-top 0.2s ease-in-out;
-  -o-transition: margin-top 0.2s ease-in-out;
-  transition: margin-top 0.2s ease-in-out;
-}
-body .content-wrapper .language-modal .modal-wrapper .content-wrapper.hideLanguageModal {
-  margin-top: -200px;
-  -webkit-transition: margin-top 0.2s ease-in-out;
-  -moz-transition: margin-top 0.2s ease-in-out;
-  -ms-transition: margin-top 0.2s ease-in-out;
-  -o-transition: margin-top 0.2s ease-in-out;
-  transition: margin-top 0.2s ease-in-out;
-}
-body .content-wrapper .language-modal .modal-wrapper .content-wrapper .language-options {
-  height: auto;
-  margin: 0 auto 15px auto;
-  display: block;
-  width: 100%;
-}
-body .content-wrapper .language-modal .modal-wrapper .content-wrapper .language-options li {
-  width: 10%;
-}
-body .content-wrapper .language-modal .modal-wrapper .content-wrapper a {
-  text-decoration: none;
-  color: #db0000;
-  font-size: 1.5rem;
-  font-weight: 100;
-  margin: auto;
-  display: block;
-  text-align: center;
-  clear: both;
-  padding: 15px;
-  border-top: 1px solid #eee;
-}
-body .content-wrapper .language-modal .modal-wrapper .content-wrapper a:hover {
-  background: #eee;
-  text-shadow: none;
-}
-body .content-wrapper .language-modal .background {
-  display: none;
-  background: #11242f;
-  opacity: 0.97;
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  display: none;
-  cursor: pointer;
-}
-body .content-wrapper .moreLanguages {
-  width: 113px;
-  height: 38px;
-  float: right;
-  border-bottom: 2px solid #11242f;
-  font-family: 'Raleway', helvetica;
-  font-weight: 100;
-  font-size: 2rem;
-  background-color: #11242f;
-  color: #fff;
-  padding: 5px 13px;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-body .content-wrapper .logotype {
-  clear: both;
-  width: 100%;
-  margin: 0 0 20px 0;
-  font-weight: 800;
-  font-size: 2.7em;
-  line-height: 1em;
-  font-family: 'Raleway', sans-serif;
-}
-body .content-wrapper .slogan {
-  margin: 0;
-  font-weight: bold;
-}
-body .content-wrapper .slogan .no-wrap {
-  white-space: nowrap;
-}
-body .content-wrapper p {
-  font-size: 4rem;
-  padding-left: 0px;
-  margin-bottom: 40px;
-  margin-top: 10px;
-  font-weight: 100;
-}
-body .content-wrapper p.mobile-text {
-  display: none;
-}
-body .content-wrapper #get-involved {
-  display: block;
-  background: #11242f;
-  color: #fff;
-  font-weight: 800;
-  padding: 20px 0;
-  width: 100%;
-  margin: 80px 0;
-  border: none;
-  clear: both;
-  -webkit-transition: background 0.2s ease-in-out;
-  -moz-transition: background 0.2s ease-in-out;
-  -ms-transition: background 0.2s ease-in-out;
-  -o-transition: background 0.2s ease-in-out;
-  transition: background 0.2s ease-in-out;
-}
-body .content-wrapper #get-involved:hover {
-  background: #ffc328;
-}
-body .content-wrapper #get-involved:focus {
-  outline: none;
-}
-body .content-wrapper #social-media {
-  margin: 20px 0 80px;
-  width: 100%;
-  display: block;
-  clear: both;
-}
-body .content-wrapper #social-media li {
-  margin: 0 -16px 0 0;
-  width: 20%;
-  height: 20%;
-}
-body .content-wrapper #social-media li a {
-  display: block;
-  -webkit-transition: background 0.2s ease-in-out;
-  -moz-transition: background 0.2s ease-in-out;
-  -ms-transition: background 0.2s ease-in-out;
-  -o-transition: background 0.2s ease-in-out;
-  transition: background 0.2s ease-in-out;
-}
-body .content-wrapper #social-media li a img {
-  width: 100%;
-  height: auto;
-}
-body .content-wrapper #social-media li a.youtube {
-  background: #b12324;
-}
-body .content-wrapper #social-media li a.facebook {
-  background: #3b59b7;
-}
-body .content-wrapper #social-media li a.twitter {
-  background: #5c90cb;
-}
-body .content-wrapper #social-media li a.tumblr {
-  background: #1e295b;
-}
-body .content-wrapper #social-media li a.instagram {
-  background: #3f729b;
-}
-body .content-wrapper #social-media li:hover a {
-  background: #ffc328;
+  margin: 15px auto 0 auto;
 }
 footer {
   width: 100%;
   background: #11242f;
-  padding: 50px 0;
-  text-align: center;
+  padding: 30px 0 50px 0;
   clear: both;
-}
-footer .content-wrapper {
-  margin: 0 auto;
   display: inline-block;
 }
-footer .content-wrapper p {
-  line-height: 1.8em;
+footer .content-wrapper {
+  overflow: auto;
+}
+footer .content-wrapper .copyright,
+footer .content-wrapper ul li,
+footer .content-wrapper ul li a {
   margin: 0;
   clear: both;
-  width: 100%;
-}
-footer .content-wrapper p,
-footer .content-wrapper a {
-  font-size: 1.75rem;
   text-shadow: none;
-  color: #fff;
+  color: #889197;
+  line-height: 22.5px;
 }
-#overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(17,36,47,0.97);
-  cursor: pointer;
+footer .content-wrapper .copyright:hover,
+footer .content-wrapper ul li:hover,
+footer .content-wrapper ul li a:hover {
+  color: #ffc328;
+  -webkit-transition: color 0.2s ease-in-out;
+  -moz-transition: color 0.2s ease-in-out;
+  -o-transition: color 0.2s ease-in-out;
+  -ms-transition: color 0.2s ease-in-out;
+  transition: color 0.2s ease-in-out;
 }
-#overlay .displayed {
-  margin-top: 0 !important;
-  -webkit-transition: margin-top 0.2s ease-in-out;
-  -moz-transition: margin-top 0.2s ease-in-out;
-  -ms-transition: margin-top 0.2s ease-in-out;
-  -o-transition: margin-top 0.2s ease-in-out;
-  transition: margin-top 0.2s ease-in-out;
+footer .content-wrapper .copyright {
+  display: inline-block;
 }
-#overlay #contact-form {
-  width: 650px;
-  margin: auto;
-  margin-top: -600px;
-  font-size: 16px;
-  padding: 20px 20px 0 20px;
-  background: #fff;
-  cursor: initial;
-  overflow: auto;
-  -webkit-transition: margin-top 0.2s ease-in-out;
-  -moz-transition: margin-top 0.2s ease-in-out;
-  -ms-transition: margin-top 0.2s ease-in-out;
-  -o-transition: margin-top 0.2s ease-in-out;
-  transition: margin-top 0.2s ease-in-out;
-}
-#overlay #contact-form * {
-  width: 100%;
-  resize: none;
-  font-family: 'Raleway', helvetica;
-  color: #11242f;
-  -webkit-transition: margin-top 0.2s ease-in-out;
-  -moz-transition: margin-top 0.2s ease-in-out;
-  -ms-transition: margin-top 0.2s ease-in-out;
-  -o-transition: margin-top 0.2s ease-in-out;
-  transition: margin-top 0.2s ease-in-out;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-}
-#overlay #contact-form .contactLogotype {
-  padding: 0 20px 20px 20px;
-  text-align: center;
-}
-#overlay #contact-form .contactLogotype,
-#overlay #contact-form input,
-#overlay #contact-form textarea {
-  border-radius: 0;
-  font-size: 1em;
-  border: none;
+footer .content-wrapper .copyright p {
   margin: 0;
-}
-#overlay #contact-form input,
-#overlay #contact-form textarea {
-  padding: 20px;
-}
-#overlay #contact-form input[type="text"] {
-  border-bottom: 1px solid #eaeaea;
-}
-#overlay #contact-form textarea {
-  min-height: 250px;
-}
-#overlay #contact-form #submit {
+  line-height: 22.5px;
+  clear: both;
+  float: left;
   font-size: 1.5em;
-  background: #fff;
-  border-top: 1px solid #eaeaea;
 }
-#overlay #contact-form input:hover,
-#overlay #contact-form textarea:hover,
-#overlay #contact-form *:focus {
-  background: #f5f5f5;
-  outline: none;
+footer .content-wrapper img {
+  -webkit-border-radius: 100%;
+  border-radius: 100%;
+  height: 20px;
+  margin: 0 3px -4px 5px;
+}
+footer .content-wrapper .links {
+  float: right;
+}
+footer .content-wrapper .links ul {
+  float: left;
+  margin: 0 0 0 50px;
+}
+footer .content-wrapper .links ul li {
+  font-size: 1.3em;
+  clear: both;
+  display: block;
+}
+footer .content-wrapper .links ul li.header {
+  color: #fff;
+  text-shadow: none;
+}
+footer .content-wrapper .links ul li a {
+  cursor: pointer;
+  text-decoration: none;
 }
 @media screen and (max-width: 1450px) {
   .content-wrapper {
