--- a/css/languages.styl
+++ b/css/languages.styl
@@ -31,6 +31,7 @@
             &.active {
                 background $wikitonguesBlue
                 color #fff
+                border-radius $radius
             }
 
             &:hover {
@@ -120,6 +121,7 @@
 }
 
 .moreLanguages {
+    border-radius $radius
     width 113px
     height 38px
     float right
