styles video strip

--- a/css/index.styl
+++ b/css/index.styl
@@ -127,3 +127,12 @@ p {
         }
     }
 }
+
+body {
+    overflow hidden
+    .faces {
+        margin-top -45px
+        margin-bottom  40px
+        margin-left -100px
+    }
+}
